--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ h1 {
     object-position: center;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
+    cursor: pointer;
   }
   .item-details {
     padding: 10px;
@@ -970,5 +971,40 @@ form button:hover {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1rem;
+  }
+}
+
+/* SINGLE PAGE */
+.single-product {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  font-family: "Inter Tight", serif;
+  color: #022034;
+  .back-btn {
+    width: 200px;
+    margin-bottom: 20px;
+  }
+  .single-cont {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1rem;
+    .product-images-cont .swiper {
+      width: 700px;
+      max-height: 600px;
+      img {
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+      }
+    }
+    .product-details {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      h2 {
+        font-size: 2em;
+      }
+    }
   }
 }
